[package]
name = "dnsinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain     = { version = "0.11.1", features = ["resolv"] }
dns-lookup = "1.0"
tokio      = { version = "1.0", features = ["io-util", "macros", "net", "time", "rt", "rt-multi-thread"] }
futures    = "0.3"

